--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,11 @@
 cachetools==5.3.0
 certifi==2022.12.7
 charset-normalizer==3.1.0
+click==8.1.3
+cloudevents==1.9.0
+deprecation==2.1.0
+Flask==2.2.3
+functions-framework==3.3.0
 google-ads==21.0.0
 google-api-core==2.11.0
 google-auth==2.17.2
@@ -12,8 +17,13 @@ google-resumable-media==2.4.1
 googleapis-common-protos==1.59.0
 grpcio==1.53.0
 grpcio-status==1.53.0
+gunicorn==20.1.0
 idna==3.4
+itsdangerous==2.1.2
+Jinja2==3.1.2
+MarkupSafe==2.1.2
 oauthlib==3.2.2
+packaging==23.0
 proto-plus==1.22.2
 protobuf==4.22.1
 pyasn1==0.4.8
@@ -24,3 +34,5 @@ requests-oauthlib==1.3.1
 rsa==4.9
 six==1.16.0
 urllib3==1.26.15
+watchdog==3.0.0
+Werkzeug==2.2.3
